overflow fix

--- a/assets/sass/_general.scss
+++ b/assets/sass/_general.scss
@@ -27,7 +27,7 @@
 
 html {
     
-    
+    overflow-x: hidden 
 }
 
 body {
@@ -39,7 +39,6 @@ body {
     font-weight: 400;
     font-style: normal;
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 section {
