--- a/assets/sass/about_page.scss
+++ b/assets/sass/about_page.scss
@@ -163,6 +163,9 @@
         @media only screen and (max-width: 576px) {
             grid-template-columns: repeat(3, 1fr);
         }
+        @media only screen and (max-width: 320px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
     }
 
     .tag {
