--- a/css/portfolio_page.css
+++ b/css/portfolio_page.css
@@ -48,6 +48,10 @@
   margin: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: var(--primary);
   font-size: 18px;
@@ -57,7 +61,6 @@ body {
   font-weight: 400;
   font-style: normal;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 section {
